refactor: ♻️ ajustar capa de aplicación
actualizar DTOs, mappers, servicios de aplicación y excepciones para soportar el modelo DDD