@@ -1,17 +1,15 @@
 package co.edu.unicauca.academicprojectservice.application.services;
 
 
-import co.edu.unicauca.academicprojectservice.application.dto.FormatoADTO;
-import co.edu.unicauca.academicprojectservice.application.dto.ProyectoDTO;
-import co.edu.unicauca.academicprojectservice.application.dto.ProyectoEstudianteDTO;
-import co.edu.unicauca.academicprojectservice.application.dto.ProyectoInfoDTO;
+import co.edu.unicauca.academicprojectservice.application.dto.*;
 
-import co.edu.unicauca.academicprojectservice.domain.model.DocenteId;
+import co.edu.unicauca.academicprojectservice.application.exceptions.ProyectoNoEncontradoException;
+import co.edu.unicauca.academicprojectservice.domain.model.*;
 
-import co.edu.unicauca.academicprojectservice.domain.model.EstudianteId;
-import co.edu.unicauca.academicprojectservice.domain.model.FormatoA;
-import co.edu.unicauca.academicprojectservice.domain.model.Proyecto;
+import co.edu.unicauca.academicprojectservice.port.out.messaging.MessagingPort;
+import co.edu.unicauca.academicprojectservice.port.out.notification.NotificationPort;
 import co.edu.unicauca.academicprojectservice.port.out.persistence.DbPortDocente;
+
 import co.edu.unicauca.academicprojectservice.port.out.persistence.DbPortEstudiante;
 import co.edu.unicauca.academicprojectservice.port.out.persistence.DbPortProyecto;
 import co.edu.unicauca.shared.contracts.model.EstadoFormatoA;
@@ -25,7 +23,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -36,23 +33,10 @@ public class ProyectoService {
     private final DbPortDocente dbPortDocente;
     private final DbPortProyecto dbPortProyecto;
     private final DbPortEstudiante dbPortEstudiante;
+    private final MessagingPort messagingPort;
+    private final NotificationPort notificationPort;
 
-
-    // ======================  nuevo
-
-    public List<ProyectoInfoDTO> listarInfoPorCorreoDocente(String correo, String filtro) {
-        DocenteId docenteId = dbPortDocente.findIdByCorreo(correo)
-                .orElseThrow(() -> new EntityNotFoundException(
-                        "Docente no encontrado con correo: " + correo
-                ));
-
-        return dbPortProyecto.listarInfoPorDocente(docenteId.value(), filtro);
-    }
-
-    public List<ProyectoEstudianteDTO> listarPorEstudiante(String correo) {
-        return dbPortProyecto.listarProyectosPorCorreoEstudiante(correo);
-    }
-
+    // Este es el que se llama por el frontenda para crear un proyecto
     public void crearProyectoConArchivos(ProyectoDTO dto) {
 
         DocenteId directorId = dbPortDocente.findIdByCorreo(dto.getDirector())
@@ -78,107 +62,125 @@ public class ProyectoService {
         }
 
         if (dto.getFormatoA() != null) {
-            String nombreFormato = dto.getFormatoA().getNombreFormato();
-            byte[] archivoFormato = dto.getFormatoA().getBlob();
+            String nombreFormato = dto.getFormatoA().nombreFormato();
+            byte[] archivoFormato = dto.getFormatoA().blob();
             proyecto.agregarFormatoAInicial(nombreFormato, archivoFormato);
         }
 
         dbPortProyecto.guardarProyecto(proyecto);
+        messagingPort.publicarMensajeRMQ(proyecto);
+        notificationPort.notificarACoordinadores(proyecto);
+    }
+
+    // ======================  nuevo
+    public List<ProyectoInfoDTO> listarInfoPorCorreoDocente(String correo, String filtro) {
+        DocenteId docenteId = dbPortDocente.findIdByCorreo(correo)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Docente no encontrado con correo: " + correo
+                ));
+
+        return dbPortProyecto.listarInfoProyectosPorCorreoDocente(correo, filtro);
+    }
+
+    public List<ProyectoEstudianteDTO> listarPorEstudiante(String correo) {
+        return dbPortProyecto.listarProyectosPorCorreoEstudiante(correo);
     }
 
     public EstadoProyecto enforceAutoCancelIfNeeded(UUID proyectoId) {
-        Proyecto proyecto = dbPortProyecto.buscarPorId(proyectoId)
-                .orElseThrow(() -> new EntityNotFoundException("Proyecto no encontrado"));
-
+        Proyecto proyecto = dbPortProyecto.findById(proyectoId);
         return proyecto.getEstadoProyecto();
     }
 
 
     public FormatoADTO obtenerUltimoFormatoAConObservaciones(UUID proyectoId) {
-        Proyecto proyecto = dbPortProyecto.findById(proyectoId)
-                .orElseThrow(() -> new EntityNotFoundException("No se encontró el proyecto con ID: " + proyectoId));
+        Proyecto proyecto = dbPortProyecto.findById(proyectoId);
 
         List<FormatoA> observados = proyecto.getFormatosA().stream()
                 .filter(f -> f.getEstado() == EstadoFormatoA.OBSERVADO)
                 .sorted((f1, f2) -> f2.getFechaCreacion().compareTo(f1.getFechaCreacion()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (observados.isEmpty()) {
             throw new EntityNotFoundException("No hay formatos A con observaciones para este proyecto");
         }
 
-        FormatoA ultimo = observados.get(0);
+        FormatoA ultimo = observados.getFirst();
 
-        FormatoADTO dto = new FormatoADTO();
-        dto.setNombreFormato(ultimo.getNombreFormato());
-        dto.setBlob(ultimo.getBlob());
-        dto.setFechaCreacion(ultimo.getFechaCreacion());
-        dto.setEstado(ultimo.getEstado());
 
-        return dto;
+        return new FormatoADTO(
+                ultimo.getNombreFormato(),
+                ultimo.getBlob(),
+                ultimo.getNroVersion(),
+                ultimo.getFechaCreacion(),
+                ultimo.getEstado()
+        );
     }
 
 
-//========================
+    public void insertarFormatoAEnProyecto(UUID proyectoId, FormatoADTO formatoA) {
+        Proyecto proyecto = dbPortProyecto.findById(proyectoId);
+        if (proyecto == null) {
+            throw new ProyectoNoEncontradoException(proyectoId);
+        }
+
+        proyecto.agregarNuevaVersionFormatoA(
+                formatoA.nombreFormato(),
+                formatoA.blob()
+        );
+
+        dbPortProyecto.guardarProyecto(proyecto);
+    }
+
+    public void asociarAnteproyectoAProyecto(String correo, AnteproyectoDTO dto) {
+        Proyecto proyecto = dbPortProyecto.buscarPorCorreo(correo);
+        proyecto.crearAnteproyecto(dto.getNombreArchivo(), dto.getDescripcion(), dto.getTitulo(), dto.getBlob());
+        dbPortProyecto.guardarProyecto(proyecto);
+    }
+
+    public int getMaxVersionFormatoA(UUID proyectoId) {
+        return dbPortProyecto.getMaxVersionFormatoA(proyectoId);
+    }
+
+    public boolean canResubmit(UUID proyectoId) {
+        EstadoProyecto estado = dbPortProyecto.obtenerEstadoProyecto(proyectoId);
+        if (estado == null ||
+                (estado != EstadoProyecto.FORMATOA_RECHAZADO
+                        && estado != EstadoProyecto.ANTEPROYECTO_ENVIADO)) {
+            return false;
+        }
+
+        int maxVersion = getMaxVersionFormatoA(proyectoId);
+        if (maxVersion == 0) return true;
+        if (maxVersion >= 3) return false;
 
 
-/**
+        FormatoA ultimo = getUltimoFormatoA(proyectoId);
 
- // ===============================
-
- // ==================================== inicio migrado ======================================
-
- private FormatoA getUltimoFormatoA(UUID proyectoId) {
- return dbPort.obtenerUltimoFormatoA(proyectoId);
- }
+        return ultimo != null && ultimo.getEstado() == EstadoFormatoA.OBSERVADO;
+    }
 
 
- public EstadoProyecto enforceAutoCancelIfNeeded(UUID proyectoId) {
-
- int observados = dbPort.contarFormatoAObservados(proyectoId);
-
- if (observados >= 3) {
- dbPort.actualizarEstadoProyecto(proyectoId, EstadoProyecto.FORMATOA_RECHAZADO);
- }
-
- return dbPort.obtenerEstadoProyecto(proyectoId);
- }
+    private FormatoA getUltimoFormatoA(UUID proyectoId) {
+        return dbPortProyecto.obtenerUltimoFormatoA(proyectoId);
+    }
 
 
- // ==================================== fin migrado ======================================
+    public boolean tieneObservaciones(UUID proyectoId) {
 
+        FormatoA ultimo = getUltimoFormatoA(proyectoId);
+        return ultimo != null && ultimo.getEstado() == EstadoFormatoA.OBSERVADO;
+    }
 
- public int getMaxVersionFormatoA(UUID proyectoId) {
- return dbPort.getMaxVersionFormatoA(proyectoId);
- }
+    public int countProyectosByEstadoYTipo(TipoProyecto tipo, EstadoProyecto estado, String correoDocente) {
+        return dbPortProyecto.countProyectosByEstadoYTipo(tipo, estado, correoDocente);
+    }
 
+    public List<AnteproyectoDTO> listarAnteproyectosDocente(String correo, String filtro) {
+        return dbPortProyecto.listarAnteproyectosPorCorreoDocente(correo, filtro);
+    }
 
- public void crearProyectoConArchivos(ProyectoDTO dto) {
- List<EstudianteId> estudiantes = dto.getEstudiantes().stream()
- .map(correo -> dbPort.buscarEstudianteIdPorCorreo(correo)
- .orElseThrow(() -> new IllegalArgumentException(
- "No existe un estudiante con el correo: " + correo)))
- .toList();
-
-
- DocenteId docenteId = dbPort.buscarDocenteIdPorCorreo(dto.getDirector())
- .orElseThrow(() -> new IllegalArgumentException("No existe un docente con ese correo"));
-
- Proyecto proyecto = new Proyecto(dto.getTitulo(), estudiantes, docenteId, dto.getTipoProyecto());
-
- proyecto.agregarFormatoAInicial(dto.getFormatoA().getNombreFormato(), dto.getFormatoA().getBlob());
-
- if (dto.getCartaLaboral() != null) {
- proyecto.adjuntarCartaLaboral(dto.getCartaLaboral());
- }
-
- Proyecto proyectoGuardado = dbPort.guardarProyecto(proyecto);
-
- messagingPort.publicarMensajeRMQ(proyectoGuardado);
- notificationPort.notificarACoordinadores(proyectoGuardado);
- }
-
-
-
- */
+    public AnteproyectoDTO obtenerAnteproyecto (UUID proyectoId) {
+        return dbPortProyecto.obtenerAnteproyecto (proyectoId);
+    }
 }
+
